<resources>
    <string name="app_name">Academic Tracker</string>
    <string name="register">Sign Up</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="grade_level">Grade Level</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="sign_up_text">Don\'t have an account? Sign Up here:</string>
    <string name="login_error">Error: Email and/or Password incorrect. Please Try Again</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Course Details</string>
    <string name="title_notes">Notes</string>
    <string name="title_discussion">Discussion</string>
    <string name="title_calendar">Calendar</string>
    <string name="course_list">Course List</string>
    <string name="semester_spring_2020">Spring 2020</string>
    <string name="course_list_item">Course List Item</string>
    <string name="upcoming_deadlines">Upcoming Deadlines</string>
    <string name="grades">Grades</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="add_your_notes_here">Add your notes here...</string>
</resources>
