<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.iit.academictracker.ui.course_details.CourseDetailsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_course_details" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.iit.academictracker.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_discussions"
        android:name="com.iit.academictracker.ui.discussions.DiscussionsFragment"
        android:label="@string/title_discussion"
        tools:layout="@layout/fragment_discussions" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.iit.academictracker.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

</navigation>
